# cart-pole

./: .gitignore  README.md  calc.ipynb  cartpole.py  custom_sympy.py  lagrangian-to-difeq.py  one_dim_qp.py  pyproject.toml  sim_config.yaml
configs/: example.yaml  sim_config.yaml
