[project]
name = "cart-pole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "cloudpickle>=3.1.2",
    "cvxopt>=1.3.2",
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
]
